--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,18 @@
 {
   "rewrites": [
     {
+      "source": "/api/deposit",
+      "destination": "/api/wallet?action=deposit"
+    },
+    {
+      "source": "/api/withdraw",
+      "destination": "/api/wallet?action=withdraw"
+    },
+    {
+      "source": "/api/history-analysis",
+      "destination": "/api/history?action=analysis"
+    },
+    {
       "source": "/api/(.*)",
       "destination": "/api/$1"
     }
