--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "dotenv": "^16.6.1",
     "drizzle-kit": "^0.31.8",
     "express": "^4.22.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
     "tsx": "^4.21.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
