clerk auth provider

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.59.4",
     "@google/genai": "^1.29.0",
     "@remix-run/router": "1.15.3",
     "bcryptjs": "^3.0.3",
@@ -34,11 +35,11 @@
     "@types/node": "^22.14.0",
     "@vercel/node": "^5.5.24",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.20",
     "concurrently": "^9.2.1",
     "dotenv": "^16.6.1",
     "drizzle-kit": "^0.31.8",
     "express": "^4.22.1",
-    "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.21.0",
