--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
   "framework": "vite",
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
   "buildCommand": "vite build",
   "devCommand": "vite --port $PORT",
   "installCommand": "npm install",
