--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:reset": "tsx drizzle/reset.ts",
     "db:seed": "tsx drizzle/seed.ts",
     "build": "vite build",
+    "start": "tsx server/index.js",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -21,29 +22,31 @@
     "@remix-run/router": "1.15.3",
     "bcryptjs": "^3.0.3",
     "cookie": "^1.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
     "drizzle-orm": "^0.45.1",
+    "express": "^4.22.1",
     "jsonwebtoken": "^9.0.3",
     "postgres": "^3.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.22.3"
+    "react-router-dom": "6.22.3",
+    "tsx": "^4.21.0",
+    "typescript": "~5.8.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
     "@types/cookie": "^1.0.0",
+    "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.14.0",
     "@vercel/node": "^5.5.24",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.2.1",
-    "dotenv": "^16.6.1",
     "drizzle-kit": "^0.31.8",
-    "express": "^4.22.1",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
-    "tsx": "^4.21.0",
-    "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
 }
