--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/api/$1"
+      "destination": "https://covies-slots.onrender.com/api/$1"
     },
     {
       "source": "/(.*)",
