--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
     "api/**/*.ts": {
       "memory": 512,
       "maxDuration": 10,
-      "runtime": "nodejs20.x"
+      "runtime": "nodejs@20.x"
     }
   },
   "headers": [
